common-applications/test-environment/openeuler-chatbot/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: openeuler-chatbot
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: backend
  type: ClusterIP
