common-applications/test-environment/openeuler-chatbot/server/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: openeuler-chatbot-server-ingress
  namespace: openeuler-chatbot
spec:
  tls:
    - hosts:
      - chatbot-backend.test.osinfra.cn
      secretName: chatbot-server-tls
  rules:
    - host: chatbot-backend.test.osinfra.cn
      http:
        paths:
        - backend:
            serviceName: backend-service
            servicePort: 80
          path: /
